2015-04-20 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-application.c:
	- close the current dossier before restoring (todo #807). 

	* src/ui/ofa-main-window.c:
	- make sure there is a dossier before closing it.

2015-04-18 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-buttons-box.c,
	* src/ui/ofa-buttons-box.h: define 'Settlement' and 'Reconciliation' buttons.

	* src/ui/ofa-accounts-chart.c,
	* src/ui/ofa-accounts-frame.c,
	* src/ui/ofa-accounts-frame.h:
	- open settlement (resp. reconciliation) page on button click (todo #813).

	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-reconciliation.h: new ofa_reconciliation_set_account() method.

	* src/ui/ofa-settlement.c,
	* src/ui/ofa-settlement.h: new ofa_settlement_set_account() method.

	* src/ui/ofa-account-select.c,
	* src/ui/ofa-accounts-page.c: updated accordingly.

	* src/ui/ofa-ledger-close.c,
	* src/ui/ofa-ledger-close.h: have a 'All ledgers' button (todo #815).

	* src/ui/ofa-ledger-treeview.c,
	* src/ui/ofa-ledger-treeview.h:
	- new ofa_ledger_treeview_get_selection() method.

	* src/ui/ofa-accounts-book.c: renamed as src/ui/ofa-accounts-chart.c
	* src/ui/ofa-accounts-book.h: renamed as src/ui/ofa-accounts-chart.h

	* src/ui/Makefile.am,
	* src/ui/ofa-account-select.c,
	* src/ui/ofa-accounts-frame.c,
	* src/ui/ofa-accounts-frame.h,
	* src/ui/ofa-accounts-page.c: updated accordingly.

	* configure.ac: post-release version bump.

	Releasing v0.39

	* src/ui/ofa-pdf-dialog.c,
	* src/ui/ofa-pdf-dialog.h,
	* src/ui/ofa-pdf-reconcil.c,
	* src/ui/ofa-pdf-reconcil.h,
	* src/ui/ofa-print-reconcil.ui: removed files.

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h:
	- mainly, fix the computing of text dimensions by setting the font
	  simultaneously in both input and temp contexts.
	- ofa_irenderable_get_text_width(): new method.

	* src/ui/ofa-reconcil-bin.c,
	* src/ui/ofa-reconcil-bin.h,
	* src/ui/ofa-reconcil-bin.ui: new ofaReconcilBin class.

	* src/ui/ofa-reconcil-render.c,